cabal-version: 1.12

name:           gamemaker-risk-of-rain
version:        0.2.0.0
synopsis:       Risk of Rain 1 GameMaker data file unpacking
description:    Please see the README on GitHub at <https://github.com/burningwitness/gamemaker-risk-of-rain#readme>
category:       Decompiler
homepage:       https://github.com/burningwitness/gamemaker-risk-of-rain#readme
bug-reports:    https://github.com/burningwitness/gamemaker-risk-of-rain/issues
author:         Oleksii Divak
maintainer:     Oleksii Divak <frozenwitness@gmail.com>
copyright:      (c) 2021-2022, Oleksii Divak
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/burningwitness/gamemaker-risk-of-rain

library
  exposed-modules: GameMaker.RiskOfRain
                   GameMaker.RiskOfRain.Decompilation
                   GameMaker.RiskOfRain.Decompilation.Raw
                   GameMaker.RiskOfRain.Lens
                   GameMaker.RiskOfRain.Lens.Internal
                   GameMaker.RiskOfRain.Unpacking
                   GameMaker.RiskOfRain.Unpacking.Unpack

  hs-source-dirs: src

  default-extensions: NoImplicitPrelude

  ghc-options: -Wall -O2

  build-depends: base >=4.12 && <5
               , binary
               , bytestring
               , containers
               , deepseq
               , microlens
               , microlens-platform
               , microlens-th
               , template-haskell
               , time
               , vector

  default-language: Haskell2010

test-suite coherence
  type: exitcode-stdio-1.0

  main-is: Main.hs

  hs-source-dirs: test/coherence

  default-extensions: NoImplicitPrelude

  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

  build-depends: base >=4.12 && <5
               , bytestring
               , deepseq
               , gamemaker-risk-of-rain
               , microlens
               , optparse-applicative

  default-language: Haskell2010
