cabal-version: 1.12

name:           gamemaker-risk-of-rain
version:        0.3.0.0
synopsis:       Risk of Rain 1 GameMaker data file unpacking
description:    Please see the README on GitHub at <https://github.com/burningwitness/gamemaker-risk-of-rain#readme>
category:       Decompiler
homepage:       https://github.com/burningwitness/gamemaker-risk-of-rain#readme
bug-reports:    https://github.com/burningwitness/gamemaker-risk-of-rain/issues
author:         Oleksii Divak
maintainer:     Oleksii Divak <frozenwitness@gmail.com>
copyright:      (c) 2021, Oleksii Divak
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/burningwitness/gamemaker-risk-of-rain

executable decompile
  main-is: Main.hs

  hs-source-dirs: app/decompile

  ghc-options: -Wall

  build-depends: base
               , binary
               , bytestring
               , gamemaker-risk-of-rain
               , optics-core

  default-language: Haskell2010

library
  exposed-modules: GameMaker.RiskOfRain.Decompilation
                   GameMaker.RiskOfRain.Disassembly
                   GameMaker.RiskOfRain.Unpacking

  hs-source-dirs: src

  ghc-options: -Wall

  build-depends: base >=4.12 && <5
               , binary
               , bytestring
               , containers
               , optics-th
               , primitive
               , time

  default-language: Haskell2010

test-suite coherence
  type: exitcode-stdio-1.0

  main-is: Main.hs

  hs-source-dirs: test/coherence

  ghc-options: -Wall

  build-depends: base
               , binary
               , bytestring
               , gamemaker-risk-of-rain
               , optics-core
               , time

  default-language: Haskell2010
